Bug 388794.  Send 0,0 as the x,y values of the click if there was no click, or if there's no imageframe for the image input.  Aligns with HTML5.  r+sr=sicking