content/html/content/src/nsHTMLInputElement.cpp
@@ -2388,16 +2388,20 @@ nsHTMLInputElement::SubmitNamesValues(nsIFormSubmission* aFormSubmission,
   //
   if (mType == NS_FORM_INPUT_IMAGE) {
     // Get a property set by the frame to find out where it was clicked.
-    nsAutoString xVal;
-    nsAutoString yVal;
-
     nsIntPoint* lastClickedPoint =
       static_cast<nsIntPoint*>(GetProperty(nsGkAtoms::imageClickedPoint));
+    PRInt32 x, y;
     if (lastClickedPoint) {
       // Convert the values to strings for submission
-      xVal.AppendInt(lastClickedPoint->x);
-      yVal.AppendInt(lastClickedPoint->y);
+      x = lastClickedPoint->x;
+      y = lastClickedPoint->y;
+    } else {
+      x = y = 0;
     }
+
+    nsAutoString xVal, yVal;
+    xVal.AppendInt(x);
+    yVal.AppendInt(y);
 
     if (!name.IsEmpty()) {
       aFormSubmission->AddNameValuePair(this,
